--- a/HomeHutBD/Views/Shared/_Layout.cshtml
+++ b/HomeHutBD/Views/Shared/_Layout.cshtml
@@ -30,10 +30,7 @@
                             <a class="nav-link" asp-area="" asp-controller="prediction" asp-action="Index"><i class="fas fa-chart-line"></i> Price Prediction</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index"><i class="fas fa-info-circle"></i> About Us</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index"><i class="fas fa-phone"></i> Contact</a>
+                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="About"><i class="fas fa-info-circle"></i> About Us</a>
                         </li>
                     </ul>
                     <div class="d-flex">
